--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
           <!-- Gift information -->
           <div class="donation-info">
             <p>If you prefer to give a wedding gift electronically, you may send it to:</p>
-            <p class="paypal-info">PayPal: xx@gmail.com</p>
+            <p class="paypal-info">PayPal: rayscilla96@gmail.com</p>
           </div>
 
           <!-- Navigation buttons -->
